data/live_cluster/batch_1k_clean/0039_artifacthub_gitea_gitea_003_networkpolicy_release-name-valkey-cluster.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-valkey-cluster
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey-cluster
    app.kubernetes.io/version: 8.1.3
    helm.sh/chart: valkey-cluster-3.0.24
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: valkey-cluster
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - ports:
    - port: 6379
    - port: 16379
